--- a/app/src/main/res/drawable/outline_box.xml
+++ b/app/src/main/res/drawable/outline_box.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke
+        android:width="2dp"
+        android:color="@android:color/black"/>
+    <padding
+        android:left="2dp"
+        android:right="2dp"
+        android:top="2dp"
+        android:bottom="2dp"/>
 
-    <solid android:color="@android:color/white" /> <!-- Background color -->
-    <stroke android:dashWidth="2dp"
-        android:color="@color/black" />
-    <corners android:bottomRightRadius="10dp"
-        android:topLeftRadius="10dp" />
+    <corners android:bottomLeftRadius="20dp"
+        android:topRightRadius="20dp"/>
 
 </shape>
