--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="35dp"
         android:hint="@string/country"
+        android:layout_marginEnd="15dp"
         app:layout_constraintStart_toEndOf="@+id/tlCity"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -75,7 +76,6 @@
         android:layout_marginEnd="15dp"
         android:background="@drawable/location"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tlCountry"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatSpinner
@@ -84,14 +84,12 @@
         android:layout_height="48dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginStart="90dp"
         android:background="@drawable/spinner_outline"
         android:dropDownWidth="100dp"
         android:dropDownVerticalOffset="48dp"
         android:popupBackground="@color/cyan"
         android:spinnerMode="dropdown"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/selectDate"
         app:layout_constraintTop_toBottomOf="@+id/location" />
 
     <TextView
@@ -150,13 +148,15 @@
         <LinearLayout
             android:id="@+id/llFajr"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="10dp"
             android:layout_marginStart="15dp"
             app:layout_constraintTop_toTopOf="parent"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/outline_box">
 
             <TextView
                 android:layout_weight="1"
@@ -183,13 +183,15 @@
         <LinearLayout
             android:id="@+id/llSunrise"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
             app:layout_constraintTop_toBottomOf="@id/llFajr"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/outline_box">>
 
             <TextView
                 android:layout_weight="1"
@@ -215,13 +217,15 @@
         <LinearLayout
             android:id="@+id/llDuhr"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
             app:layout_constraintTop_toBottomOf="@id/llSunrise"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/outline_box">
 
             <TextView
                 android:layout_weight="1"
@@ -247,13 +251,15 @@
         <LinearLayout
             android:id="@+id/llAsr"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
             app:layout_constraintTop_toBottomOf="@id/llDuhr"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/outline_box">
 
             <TextView
                 android:layout_weight="1"
@@ -279,13 +285,15 @@
         <LinearLayout
             android:id="@+id/llSunset"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
             app:layout_constraintTop_toBottomOf="@id/llAsr"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/outline_box">
 
             <TextView
                 android:layout_weight="1"
@@ -311,13 +319,15 @@
         <LinearLayout
             android:id="@+id/llMaghrib"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
             app:layout_constraintTop_toBottomOf="@id/llSunset"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/outline_box">
 
             <TextView
                 android:layout_weight="1"
@@ -343,13 +353,15 @@
         <LinearLayout
             android:id="@+id/llIsha"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
             app:layout_constraintTop_toBottomOf="@id/llMaghrib"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/outline_box">
 
             <TextView
                 android:layout_weight="1"
@@ -375,13 +387,15 @@
         <LinearLayout
             android:id="@+id/llMidnight"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
             app:layout_constraintTop_toBottomOf="@id/llIsha"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/outline_box">
 
             <TextView
                 android:layout_weight="1"
@@ -407,13 +421,15 @@
         <LinearLayout
             android:id="@+id/llFirstThird"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
             app:layout_constraintTop_toBottomOf="@id/llMidnight"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/outline_box">
 
             <TextView
                 android:layout_weight="1"
@@ -439,13 +455,15 @@
         <LinearLayout
             android:id="@+id/llLastthird"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
             app:layout_constraintTop_toBottomOf="@id/llFirstThird"
             android:orientation="horizontal"
-            android:weightSum="2">
+            android:weightSum="2"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/outline_box">
 
             <TextView
                 android:layout_weight="1"
@@ -536,6 +554,17 @@
                 android:textSize="34sp"/>
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvMonthArabic"
+            android:layout_width="250dp"
+            android:layout_height="70dp"
+            android:padding="3dp"
+            android:textStyle="bold"
+            android:textSize="34sp"
+            android:layout_marginEnd="80dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/llMonth" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
