--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:padding="20dp">
 
 
     <TextView
+        android:id="@+id/tvLocationText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/locationTv"
@@ -15,6 +17,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="5dp"
+        android:textSize="14sp"
+        android:gravity="center_horizontal"
         android:textStyle="bold"/>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -22,10 +26,10 @@
         android:layout_width="150dp"
         android:layout_height="48dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="5dp"
         android:hint="@string/city"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/tvLocationText">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etCity"
@@ -35,7 +39,6 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:singleLine="true"
-            android:text=""
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,11 +50,11 @@
         android:layout_width="150dp"
         android:layout_height="48dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="5dp"
         android:hint="@string/country"
         android:layout_marginEnd="15dp"
         app:layout_constraintStart_toEndOf="@+id/tlCity"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/tvLocationText">
 
         <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/etCountry"
@@ -61,7 +64,6 @@
         android:singleLine="true"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:text=""
         app:layout_constraintStart_toEndOf="@+id/tlCity"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -72,17 +74,16 @@
         android:id="@+id/location"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/location"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/tlCountry"
+        app:layout_constraintTop_toBottomOf="@id/tvLocationText" />
 
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/spinner"
         android:layout_width="120dp"
         android:layout_height="48dp"
-        android:layout_marginTop="25dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/spinner_outline"
         android:dropDownWidth="120dp"
@@ -90,13 +91,13 @@
         android:popupBackground="@color/cyan"
         android:spinnerMode="dropdown"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/location" />
+        app:layout_constraintTop_toBottomOf="@+id/selectDate" />
 
     <TextView
         android:id="@+id/selectDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="95dp"
+        android:layout_marginTop="5dp"
         android:layout_marginStart="15dp"
         android:textSize="14sp"
         android:padding="4dp"
@@ -104,7 +105,7 @@
         android:text="@string/select_date_default"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tlCity" />
 
     <TextView
         android:id="@+id/btnCalender"
@@ -125,6 +126,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/cyan"
+        android:layout_marginTop="15dp"
         android:text="@string/get_timings"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -132,23 +134,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCalender" />
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintTimings"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCalender"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/btnGetTimings">
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintTimings"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
 
         <LinearLayout
             android:id="@+id/llFajr"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="10dp"
             android:layout_marginStart="15dp"
@@ -159,7 +167,7 @@
             android:background="@drawable/outline_box">
 
             <TextView
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:text="@string/fajr"
@@ -170,7 +178,7 @@
 
             <TextView
                 android:id="@+id/tvFajr"
-                android:layout_weight="1"
+                android:layout_weight=".8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
@@ -183,7 +191,7 @@
         <LinearLayout
             android:id="@+id/llSunrise"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
@@ -191,10 +199,10 @@
             android:orientation="horizontal"
             android:weightSum="2"
             android:layout_marginEnd="15dp"
-            android:background="@drawable/outline_box">>
+            android:background="@drawable/outline_box">
 
             <TextView
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:text="@string/sunrise"
@@ -205,7 +213,7 @@
 
             <TextView
                 android:id="@+id/tvSunrise"
-                android:layout_weight="1"
+                android:layout_weight=".8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
@@ -217,7 +225,7 @@
         <LinearLayout
             android:id="@+id/llDuhr"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
@@ -228,7 +236,7 @@
             android:background="@drawable/outline_box">
 
             <TextView
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:text="@string/dhuhr"
@@ -239,7 +247,7 @@
 
             <TextView
                 android:id="@+id/tvDhuhr"
-                android:layout_weight="1"
+                android:layout_weight=".8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
@@ -251,7 +259,7 @@
         <LinearLayout
             android:id="@+id/llAsr"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
@@ -262,7 +270,7 @@
             android:background="@drawable/outline_box">
 
             <TextView
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:text="@string/asr"
@@ -273,7 +281,7 @@
 
             <TextView
                 android:id="@+id/tvAsr"
-                android:layout_weight="1"
+                android:layout_weight=".8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
@@ -285,7 +293,7 @@
         <LinearLayout
             android:id="@+id/llSunset"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
@@ -296,7 +304,7 @@
             android:background="@drawable/outline_box">
 
             <TextView
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:text="@string/sunset"
@@ -306,7 +314,7 @@
                 android:padding="1dp"/>
             <TextView
                 android:id="@+id/tvSunset"
-                android:layout_weight="1"
+                android:layout_weight=".8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
@@ -319,7 +327,7 @@
         <LinearLayout
             android:id="@+id/llMaghrib"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
@@ -330,7 +338,7 @@
             android:background="@drawable/outline_box">
 
             <TextView
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:text="@string/maghrib"
@@ -340,7 +348,7 @@
                 android:padding="1dp"/>
             <TextView
                 android:id="@+id/tvMaghrib"
-                android:layout_weight="1"
+                android:layout_weight=".8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
@@ -353,7 +361,7 @@
         <LinearLayout
             android:id="@+id/llIsha"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
@@ -364,7 +372,7 @@
             android:background="@drawable/outline_box">
 
             <TextView
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:text="@string/isha"
@@ -374,7 +382,7 @@
                 android:padding="1dp"/>
             <TextView
                 android:id="@+id/tvIsha"
-                android:layout_weight="1"
+                android:layout_weight=".8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
@@ -387,7 +395,7 @@
         <LinearLayout
             android:id="@+id/llMidnight"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
@@ -398,7 +406,7 @@
             android:background="@drawable/outline_box">
 
             <TextView
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:text="@string/midnight"
@@ -408,7 +416,7 @@
                 android:padding="1dp"/>
             <TextView
                 android:id="@+id/tvMidnight"
-                android:layout_weight="1"
+                android:layout_weight=".8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
@@ -421,7 +429,7 @@
         <LinearLayout
             android:id="@+id/llFirstThird"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
@@ -432,7 +440,7 @@
             android:background="@drawable/outline_box">
 
             <TextView
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:text="@string/firstthird"
@@ -442,7 +450,7 @@
                 android:padding="1dp"/>
             <TextView
                 android:id="@+id/tvFirstthird"
-                android:layout_weight="1"
+                android:layout_weight=".8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
@@ -455,7 +463,7 @@
         <LinearLayout
             android:id="@+id/llLastthird"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="5dp"
             android:layout_marginStart="15dp"
@@ -466,7 +474,7 @@
             android:background="@drawable/outline_box">
 
             <TextView
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:text="@string/lastThird"
@@ -476,7 +484,7 @@
                 android:padding="1dp"/>
             <TextView
                 android:id="@+id/tvLastthird"
-                android:layout_weight="1"
+                android:layout_weight=".8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
@@ -489,7 +497,7 @@
         <LinearLayout
             android:id="@+id/llHijri"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="15dp"
             android:layout_marginStart="15dp"
@@ -499,7 +507,7 @@
 
             <TextView
                 android:layout_weight="0.5"
-                android:layout_width="30dp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="@string/hijri"
                 android:gravity="center_vertical"
@@ -524,7 +532,7 @@
         <LinearLayout
             android:id="@+id/llMonth"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="15dp"
             app:layout_constraintTop_toBottomOf="@id/llHijri"
@@ -532,18 +540,17 @@
             android:weightSum="2">
 
             <TextView
-                android:layout_weight="0.5"
-                android:layout_width="30dp"
+                android:layout_weight="0.7"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="@string/islamic_month"
                 android:gravity="center_vertical"
-                android:textSize="36sp"
+                android:textSize="34sp"
                 android:textStyle="bold"
-                android:layout_marginStart="10dp"
-                android:padding="1dp"/>
+                android:layout_marginStart="10dp" />
             <TextView
                 android:id="@+id/tvMonth"
-                android:layout_weight="1.5"
+                android:layout_weight="1.3"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
@@ -568,6 +575,8 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/llLottie"
