--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:background="@drawable/border">
 
 
     <TextView
@@ -23,13 +24,14 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tlCity"
-        android:layout_width="150dp"
         android:layout_height="48dp"
+        android:layout_width="0dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
         android:hint="@string/city"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvLocationText">
+        app:layout_constraintTop_toBottomOf="@id/tvLocationText"
+        app:layout_constraintWidth_percent="0.4">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etCity"
@@ -47,14 +49,15 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tlCountry"
-        android:layout_width="150dp"
         android:layout_height="48dp"
+        android:layout_width="0dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
         android:hint="@string/country"
         android:layout_marginEnd="15dp"
         app:layout_constraintStart_toEndOf="@+id/tlCity"
-        app:layout_constraintTop_toBottomOf="@id/tvLocationText">
+        app:layout_constraintTop_toBottomOf="@id/tvLocationText"
+        app:layout_constraintWidth_percent="0.4">
 
         <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/etCountry"
@@ -72,9 +75,11 @@
 
     <Button
         android:id="@+id/location"
-        android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_width="40dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginStart="5dp"
         android:background="@drawable/location"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tlCountry"
@@ -140,6 +145,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="20dp"
         app:layout_constraintTop_toBottomOf="@+id/btnGetTimings">
 
 
@@ -578,7 +584,7 @@
 
     </ScrollView>
 
-    <LinearLayout
+    <!--<LinearLayout
         android:id="@+id/llLottie"
         android:background="#FFFFFF"
         android:layout_width="match_parent"
@@ -586,18 +592,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnGetTimings"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent">-->
 
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/lottieLoading"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            app:lottie_rawRes="@raw/loading_meeqat" />
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottieLoading"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/loading_meeqat" />
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
 
 
